# macaroon-backend

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: Deploy.yml
djangoProject/: settings.py
macaroon/: apps.py
macaroonApp/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
macaroonApp/migrations/: 0001_initial.py  0002_refreshtoken_token.py  0003_alter_profile_user.py  0004_profile_contacts.py  0005_customgroup.py  0006_transaction.py  0007_rename_receiver_transaction_intermediary.py  0008_transaction_message.py  0009_contract.py  0010_finalpayment_delete_contract.py  0011_rename_transaction_id_transaction_contract_address.py  0012_transaction_expiry_alter_finalpayment_amount_and_more.py
macaroonBackend/: asgi.py  settings.py  urls.py  wsgi.py
utils/: run.sh
